--- a/Dialog/MainWindow/MainWindow.ui
+++ b/Dialog/MainWindow/MainWindow.ui
@@ -37,6 +37,19 @@
      <string>Open Description</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButtonBack">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>680</y>
+      <width>141</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Back</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
